# rk_flash

./: Cargo.toml  build.rs  gallery.pot  update_translations.sh
lang/de/LC_MESSAGES/: gallery.po
lang/fr/LC_MESSAGES/: gallery.po
src/: archive.rs  cfg.rs  flash.rs  init_ui.rs  main.rs  merge_filesystem.rs  ssh_session.rs  telnet_sessions.rs
ui/: test.slint  test_settings.slint
ui/pages/: about_page.slint  board_page.slint  controls_page.slint  functions_page.slint  other_page.slint  page.slint  pages.slint  settings_page.slint
