[package]
name = "rk_flash"
version = "1.6.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false
description = "Testing GUI software"

[[bin]]
path = "src/main.rs"
name = "rk_flash"

[dependencies]
chrono = "0.4.0"
rand = "0.8"
slint = "1.7.1"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
flate2 = "1.0.31"
tar = "0.4.39"  
walkdir = "2.5.0"
zip="2.1.6"
regex="1.10.6"

# Disable gettext on macOS due to https://github.com/Koka/gettext-rs/issues/114


[build-dependencies]
slint-build = "1.6"

# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# crate-type = ["cdylib"]
#wasm# path = "main.rs"
#wasm#
#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"

[package.metadata.bundle]
identifier = "com.slint.examples.gallery"
